[package]
name = "extsort-lily"
version = "0.1.1"
edition = "2021"
license = "BSD-3-Clause"
description = "An efficient external merge sort implementation."
documentation = "https://docs.rs/extsort-lily"
keywords = ["sort", "external", "merge", "mergesort"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3"

[dev-dependencies]
rand = "0.8"
